[gd_scene load_steps=2 format=3 uid="uid://bmgi2w1hmbc3p"]

[ext_resource type="Script" path="res://Pathways/Pathway.gd" id="1_j2rnd"]

[node name="Pathway" type="Node3D" groups=["pathway"]]
script = ExtResource("1_j2rnd")

[node name="ShovelArea3D" type="Area3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)

[node name="CollisionPolygon3D" type="CollisionPolygon3D" parent="ShovelArea3D"]
unique_name_in_owner = true

[connection signal="body_entered" from="ShovelArea3D" to="." method="_on_shovel_area_3d_body_entered"]
[connection signal="body_exited" from="ShovelArea3D" to="." method="_on_shovel_area_3d_body_exited"]
